test/valid/64854_inc/inc.agu
-- Author: 64854, Diogo Almeida

let main(_) : Unit -> Unit =
    let i : Int = 0 ;
    set i = i + 1 ;
    print(i)