test/invalid-syntax/64854_missing_separator_in_while_loop/missing_separator_in_while_loop.agu
-- Author: 64854, Diogo Almeida

let i : Int = 0;
let count : Int = 0;
while i < 10 do (
    set count = count + i
    -- mising the separator ;
    set i = i + 1
)